# My-Infra-template

./: Makefile  README.md  pyproject.toml  variables.tf  versions.tf
ansible/: ansible.cfg
ansible/group_vars/: all.yml  appservers.yml  databases.yml  webservers.yml
ansible/inventory/: dynamic.py  hosts.yml
ansible/playbooks/: database.yml  site.yml  webserver.yml
ansible/roles/appserver/handlers/: main.yml
ansible/roles/appserver/tasks/: main.yml
ansible/roles/appserver/templates/: app.service.j2
ansible/roles/appserver/vars/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: amazon-cloudwatch-agent.json.j2  system-monitor.sh.j2
ansible/roles/common/vars/: main.yml
ansible/roles/database/handlers/: main.yml
ansible/roles/database/tasks/: main.yml
ansible/roles/database/templates/: postgresql.conf.j2
ansible/roles/database/vars/: main.yml
ansible/roles/security/handlers/: main.yml
examples/simple-web-app/: README.md  main.tf
scripts/: deploy.sh  generate_inventory.sh  validate.sh
terraform/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/environments/dev/: terraform.tfvars
terraform/environments/prod/: terraform.tfvars
terraform/environments/staging/: terraform.tfvars
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
(+11 files in other folders)
