[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.9.0",
    "boto3>=1.40.7",
    "botocore>=1.40.7",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.14.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.4",
]
